! r refined DevAvailabilityCalendar to implement logic in the class. Removed static method signature. refactored DevData to Dev record.