@@ -22,12 +22,12 @@ class BookingServiceTest {
         List<Bar> indoorBars = List.of(
                 barWith(indoorBarName, asList(DayOfWeek.WEDNESDAY, DayOfWeek.THURSDAY, DayOfWeek.FRIDAY))
         );
-        List<DevData> developers = asList(
-                new DevData("Alice", asList(WEDNESDAY, THURSDAY, FRIDAY)),
-                new DevData("Bob", List.of(THURSDAY)),
-                new DevData("Chad", List.of(FRIDAY)),
-                new DevData("Dan", Arrays.asList(WEDNESDAY, THURSDAY)),
-                new DevData("Eve", List.of(THURSDAY))
+        List<Dev> developers = asList(
+                new Dev("Alice", asList(WEDNESDAY, THURSDAY, FRIDAY)),
+                new Dev("Bob", List.of(THURSDAY)),
+                new Dev("Chad", List.of(FRIDAY)),
+                new Dev("Dan", Arrays.asList(WEDNESDAY, THURSDAY)),
+                new Dev("Eve", List.of(THURSDAY))
         );
 
         BookingController controller = buildController(indoorBars, developers);
@@ -47,12 +47,12 @@ class BookingServiceTest {
                 barWith(indoorBarName, asList(DayOfWeek.WEDNESDAY, DayOfWeek.THURSDAY, DayOfWeek.FRIDAY))
         );
 
-        List<DevData> developers = asList(
-                new DevData("Alice", asList(WEDNESDAY, FRIDAY)),
-                new DevData("Bob", List.of(THURSDAY)),
-                new DevData("Chad", List.of(FRIDAY)),
-                new DevData("Dan", List.of(WEDNESDAY)),
-                new DevData("Eve", List.of(THURSDAY))
+        List<Dev> developers = asList(
+                new Dev("Alice", asList(WEDNESDAY, FRIDAY)),
+                new Dev("Bob", List.of(THURSDAY)),
+                new Dev("Chad", List.of(FRIDAY)),
+                new Dev("Dan", List.of(WEDNESDAY)),
+                new Dev("Eve", List.of(THURSDAY))
         );
 
         BookingController controller = buildController(indoorBars, developers);
@@ -67,9 +67,9 @@ class BookingServiceTest {
                 barWith("another name", List.of(DayOfWeek.FRIDAY)),
                 barWith(indoorBarName, List.of(DayOfWeek.THURSDAY))
         );
-        List<DevData> developers = asList(
-                new DevData("Bob", List.of(THURSDAY)),
-                new DevData("Eve", List.of(THURSDAY))
+        List<Dev> developers = asList(
+                new Dev("Bob", List.of(THURSDAY)),
+                new Dev("Eve", List.of(THURSDAY))
         );
 
         BookingController controller = buildController(indoorBars, developers);
@@ -89,9 +89,9 @@ class BookingServiceTest {
                 barWith("another name", List.of(DayOfWeek.FRIDAY)),
                 barWith(indoorBarName, List.of(DayOfWeek.THURSDAY))
         );
-        List<DevData> developers = asList(
-                new DevData("Bob", List.of(WEDNESDAY)),
-                new DevData("Eve", List.of(WEDNESDAY))
+        List<Dev> developers = asList(
+                new Dev("Bob", List.of(WEDNESDAY)),
+                new Dev("Eve", List.of(WEDNESDAY))
         );
 
         BookingController controller = buildController(indoorBars, developers);
@@ -105,13 +105,13 @@ class BookingServiceTest {
     void chooseABarWithEnoughSpace() {
         String indoorBarName = "Bar La Belle Equipe";
         List<Bar> indoorBars = List.of(
-                barWith(indoorBarName, 3, List.of(DayOfWeek.THURSDAY))
+                barWith(indoorBarName, 2, List.of(DayOfWeek.THURSDAY))
         );
-        List<DevData> developers = asList(
-                new DevData("Bob", List.of(THURSDAY)),
-                new DevData("Eve", List.of(THURSDAY)),
-                new DevData("Fred", List.of(THURSDAY)),
-                new DevData("Marie", List.of(THURSDAY))
+        List<Dev> developers = asList(
+                new Dev("Bob", List.of(THURSDAY)),
+                new Dev("Eve", List.of(THURSDAY)),
+                new Dev("Fred", List.of(THURSDAY)),
+                new Dev("Marie", List.of(THURSDAY))
 
         );
 
@@ -131,9 +131,9 @@ class BookingServiceTest {
         List<Boat> boats = List.of(
                 new Boat(indoorBarName, 3)
         );
-        List<DevData> developers = asList(
-                new DevData("Bob", List.of(THURSDAY)),
-                new DevData("Eve", List.of(THURSDAY))
+        List<Dev> developers = asList(
+                new Dev("Bob", List.of(THURSDAY)),
+                new Dev("Eve", List.of(THURSDAY))
         );
 
         BookingController controller = buildController(indoorBars, developers, boats);
@@ -150,12 +150,12 @@ class BookingServiceTest {
     }
 
     private static BookingController buildController(List<Bar> barData,
-                                                     List<DevData> devData) {
+                                                     List<Dev> devData) {
         List<Boat> boats = Collections.emptyList();
         return buildController(barData, devData, boats);
     }
 
-    private static BookingController buildController(List<Bar> barData, List<DevData> devData, List<Boat> boats) {
+    private static BookingController buildController(List<Bar> barData, List<Dev> devData, List<Boat> boats) {
         var boatRepo = new FakeBoatRepository(boats);
         var bookingRepository = new FakeBookingRepository();
         return new BookingController(new BookingService(
